--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -12,7 +12,7 @@ nav {
   display: none;
 }
 
-.sode-logo>img {
+.side-logo>img {
   width: 60%;
 }
 
@@ -51,6 +51,10 @@ body {
   }
 }
 
+.sidenav.open {
+  transform: translateX(0);
+}
+
 .sidenav {
   padding-top: 70px;
   position: fixed;
@@ -58,11 +62,12 @@ body {
   left: 0;
   opacity: 1;
   height: calc(100% - 70px);
-  width: 0;
+  width: 300px;
   z-index: 1;
   background-color: #28361d;
   overflow-x: hidden;
-  transition: width 0.5s ease, opacity 1s ease-in;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease;
   text-align: center;
 
   display: flex;
