--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -6,6 +6,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #0e130e;
+  z-index: 100;
+
 }
 
 .mobile_logo {
@@ -27,7 +30,6 @@ nav {
 
 body {
   margin-top: calc(70px);
-  background-color: #121d0b;
   height: calc(100vh - 70px);
 }
 
@@ -46,8 +48,8 @@ body {
 
 @media screen and (max-height: 700px) {
   .sidenav {
-    padding-top: 30px!important;
-    height: calc(100% - 30px)!important;
+    padding-top: 30px !important;
+    height: calc(100% - 30px) !important;
   }
 }
 
@@ -63,7 +65,7 @@ body {
   opacity: 1;
   height: calc(100% - 70px);
   width: 300px;
-  z-index: 1;
+  z-index: 1000;
   background-color: #28361d;
   overflow-x: hidden;
   transform: translateX(-100%);
