--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Lekton";
+  font-style: normal;
+}
+
 .wrap {
   flex-wrap: wrap;
 }
@@ -25,6 +30,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.flex-column-start {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .gap-1 {
@@ -56,10 +67,9 @@
 body {
   font-family: "Lekton";
   font-style: normal;
-  margin: 0;
   font-family: "Inter";
   font-style: normal;
-  background-color: #121d0b;
+  background-color: #0e130e;
 }
 
 
@@ -129,38 +139,13 @@ h1 {
   color: #ebf6e5;
 }
 
-.question {
-  min-width: 400px;
-  padding: 1em;
-  background: rgba(41, 112, 80, 0.2);
-  border: 1px solid #297050;
-  border-radius: 10px;
-}
 
-textarea {
-  text-align: left;
-  padding: 1em;
-  border: 0;
-  background: rgba(236, 248, 243, 0.2);
-  box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 10px;
-}
+
 
 .input-description {
   font-size: 1em;
   line-height: 2em;
 }
-
-
-
-.container {
-  background-color: white;
-  border-radius: 1em;
-  padding: 1em;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-}
-
 
 .score-sub-text {
   font-family: "Lekton";
@@ -316,7 +301,8 @@ textarea {
   display: none;
 }
 
-.option-container input {
+.option-container input[type="radio"],
+.option-container input[type="checkbox"]{
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -461,93 +447,11 @@ i {
   color: #65ccb8;
 }
 
-.enter-button {
-  width: 40%;
-  border: 0;
-  text-align: center;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  background: #b0da99;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.5em;
-  line-height: 2em;
-  letter-spacing: 0.4em;
-  color: #000000;
-}
 
-.card-inner {
-  padding-left: 1em;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
 
-.info {
-  margin-right: 20px;
-  font-family: "Lekton";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.5em;
-  line-height: 1.5em;
-  color: #ebf6e5;
-}
 
-.card-image-background {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1em;
-  background: linear-gradient(180deg, #b0da99 0%, #65ccb8 100%);
-  border-radius: 20px 0px;
-}
-
-.card-right-background {
-  background: linear-gradient(180deg,
-      rgba(176, 218, 153, 0.3) 0%,
-      rgba(101, 204, 184, 0.3) 100%);
-  border-radius: 0px 20px 20px 0px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1em;
-}
-
-.card-image {
-  width: 90%;
-  height: 90%;
-  border-radius: 20px 0px;
-}
-
-.title {
-  font-family: "Lekton";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.5em;
-  letter-spacing: 0.05em;
-  color: #ebf6e5;
-  margin: 1em 0;
-}
-
-.description {
-  font-family: "Lekton";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.2em;
-  letter-spacing: 0.05em;
-  color: #ebf6e5;
-}
 
 @media screen and (max-width: 600px) {
-  body {
-    height: 100vh !important;
-    margin-top: 0 !important;
-  }
-
   .follow-row {
     display: flex;
     align-items: center;
@@ -987,8 +891,10 @@ menu {
 form input[type="text"],
 form input[type="email"],
 form input[type="password"],
+form input[type="number"],
+form input[type="date"],
 form select {
-  width: 100%;
+  width: 90%;
   height: 50px;
   border: 0;
   border-radius: 10px;
@@ -997,7 +903,7 @@ form select {
   background: rgba(236, 248, 243, 0.2);
   color: #ebf6e5;
   font-weight: 400;
-  font-size: 1.2em;
+  font-size: 1.1em;
   letter-spacing: 0.18em;
 }
 
@@ -1009,4 +915,261 @@ form select {
   .logo>img {
     width: 80% !important;
   }
+}
+
+
+.container {
+  width: 1300px !important;
+  padding-top: 0 !important;
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (min-width: 992px) and (max-width: 1439px) {
+  .container {
+    max-width: 1279px !important;
+    margin: 0 80px !important;
+    width: auto !important;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .container {
+    max-width: 940px !important;
+    margin: 0 16px !important;
+    width: auto !important;
+  }
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2em;
+  gap: 2em;
+}
+
+@media screen and (max-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr;
+    padding: 1em !important;
+  }
+}
+
+
+.container-card {
+  border: 2px solid transparent;
+  background: linear-gradient(71deg, #091610, #121d0cc2, #0e1914);
+  background-clip: padding-box;
+  border-radius: 30px;
+  padding: 40px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card {
+  max-width: 500px;
+  border: 0;
+  width: 100%;
+}
+
+.bg-green-box {
+  position: relative;
+}
+
+.bg-green-box::after {
+  position: absolute;
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  content: "";
+  z-index: -1;
+  border-radius: 30px;
+}
+
+.bg-green-box::after {
+  background: linear-gradient(71deg, #195d5d, #137985, #648154);
+}
+
+.card-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 30px;
+}
+
+
+.image-green-box {
+  position: relative;
+}
+
+.image-green-box::after {
+  position: absolute;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  content: "";
+  z-index: -1;
+  border-radius: 30px;
+}
+
+.image-green-box::after {
+  background: linear-gradient(71deg, #195d5d, #137985, #648154);
+}
+
+.info {
+  font-weight: 700;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  color: #ebf6e5;
+}
+
+.title {
+  margin-top: 10px;
+  font-weight: 700;
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  color: #ebf6e5;
+  text-align: left;
+}
+
+
+.description {
+  max-height: 2.2em;
+  font-weight: 400;
+  line-height: 1.1em;
+  font-size: 1em;
+  overflow: hidden;
+  color: #ebf6e5;
+  text-align: justify;
+}
+
+.expanded .description {
+  max-height: none;
+}
+
+.card-top {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  margin-bottom: 10px;
+}
+
+.show-more-btn {
+  margin-left: auto;
+  background: #b0da99;
+  color: #121d0b;
+  border-radius: 10px;
+  padding: 5px 10px;
+  border: 0;
+  cursor: pointer;
+  margin-bottom: 1em;
+}
+
+.infos {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+}
+
+@media screen and (max-width: 600px) {
+  .container-card {
+    padding: 20px !important;
+  }
+
+  .infos {
+    flex-direction: column;
+    margin-left: 2em;
+    gap: 10px;
+  }
+}
+
+
+
+.enter-button {
+  margin-top: 1em;
+  text-decoration: none;
+  width: 60%;
+  padding: 0.2em;
+  border: 0;
+  text-align: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background: #b0da99;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2em;
+  letter-spacing: 0.4em;
+  color: #000000;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.published {
+  margin-top: 1em;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.2em;
+  color: white;
+}
+
+.add-quest {
+  position: fixed;
+  z-index: 300;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 2px solid #b0da99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+.add-quest i {
+  color: #b0da99;
+}
+
+#questForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#questForm input {
+  width: 100%;
+}
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+}
+
+td {
+  padding: 0.5em;
+}
+
+textarea {
+  width: 90%;
+}
+
+textarea {
+  text-align: left;
+  padding: 0.5em;
+  border: 0;
+  height: auto;
+  background: rgba(236, 248, 243, 0.2);
+  box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
 }
