--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,8 @@ body {
   font-family: "Inter";
   font-style: normal;
   background-color: #0e130e;
+  margin: 0!important;
+  padding: 0!important;
 }
 
 
