--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -29,7 +29,7 @@ nav {
 }
 
 body {
-  margin-top: calc(70px)!important;
+  margin-top: calc(70px) !important;
   height: calc(100vh - 70px);
 }
 
@@ -159,4 +159,74 @@ body {
 
 .menu-items {
   gap: 1.4em;
+}
+
+.menus {
+  display: none;
+}
+
+.nav-link {
+  font-size: 1em;
+  align-self: center;
+}
+
+@media screen and (max-width: 600px) {
+  .inline-menu {
+    display: none !important;
+  }
+
+  .dropdown {
+    display: block !important;
+  }
+}
+
+.inline-menu {
+  display: flex;
+  gap: 1em;
+}
+
+.dropdown {
+  display: none;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 1.2em;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn,
+.dropbtn:focus {
+  color: #b0da99;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #b0da99;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 200;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px;
+  text-decoration: none;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
 }
