--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,19 @@
   align-items: center;
 }
 
+.flex-row-between-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-row-around-center {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
 .flex-row-evenly-center {
   display: flex;
   justify-content: space-evenly;
@@ -54,9 +67,25 @@
   width: 100%;
 }
 
-.width-50 {
+.w-50 {
   width: 50%;
 }
+
+.w-100 {
+  width: 100%;
+}
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: minmax(100px, 5fr) 1fr 1fr;
+  gap: 1em;
+}
+
+.center {
+  text-align: center;
+  align-self: center;
+}
+
 
 /* full container used in login/register page */
 .full-container {
@@ -70,8 +99,8 @@ body {
   font-family: "Inter";
   font-style: normal;
   background-color: #0e130e;
-  margin: 0!important;
-  padding: 0!important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 
@@ -304,7 +333,7 @@ h1 {
 }
 
 .option-container input[type="radio"],
-.option-container input[type="checkbox"]{
+.option-container input[type="checkbox"] {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -429,20 +458,6 @@ a.main-button {
 
 .tos-text>a:visited {
   color: royalblue;
-}
-
-
-
-
-.card-background {
-  justify-content: center;
-  display: grid;
-  grid-template-columns: minmax(300px, 1fr) minmax(400px, 2fr) minmax(300px,
-      1fr);
-  background: rgba(41, 112, 80, 0.2);
-  border: 1px solid #297050;
-  box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px 20px 20px 0px;
 }
 
 i {
@@ -883,11 +898,18 @@ menu {
 }
 
 .error-message {
+  width: 100%;
   height: 1em;
-  font-size: 0.8em;
+  font-size: 0.9em;
+  letter-spacing: 0.1em;
   align-items: center;
   text-align: center;
   color: rgb(215, 238, 109);
+}
+
+.login-input {
+  width: 90%;
+  height: 50px;
 }
 
 form input[type="text"],
@@ -896,17 +918,15 @@ form input[type="password"],
 form input[type="number"],
 form input[type="date"],
 form select {
-  width: 90%;
-  height: 50px;
   border: 0;
   border-radius: 10px;
   text-align: center;
   box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
   background: rgba(236, 248, 243, 0.2);
   color: #ebf6e5;
-  font-weight: 400;
-  font-size: 1.1em;
-  letter-spacing: 0.18em;
+  font-weight: 500;
+  font-size: 1.2em;
+  letter-spacing: 0.10em;
 }
 
 @media screen and (max-width: 960px) {
@@ -950,10 +970,18 @@ form select {
   gap: 2em;
 }
 
+.login {
+  width: 80%;
+}
+
 @media screen and (max-width: 1200px) {
   .cards {
     grid-template-columns: 1fr;
     padding: 1em !important;
+  }
+
+  .login {
+    width: 100%;
   }
 }
 
@@ -975,6 +1003,12 @@ form select {
 .card {
   max-width: 500px;
   border: 0;
+  width: 100%;
+}
+
+
+.login-container {
+  max-width: 700px;
   width: 100%;
 }
 
@@ -1148,10 +1182,6 @@ form select {
   width: 100%;
 }
 
-#questForm input {
-  width: 100%;
-}
-
 .grid-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -1163,15 +1193,44 @@ td {
 }
 
 textarea {
-  width: 90%;
+  width: 100%;
 }
 
 textarea {
   text-align: left;
-  padding: 0.5em;
   border: 0;
-  height: auto;
+  height: 70px;
   background: rgba(236, 248, 243, 0.2);
   box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
   border-radius: 10px;
+}
+
+.options-container-create {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+
+.points {
+  height: 50px;
+  width: 95%;
+  border-radius: 5px !important;
+}
+
+
+form textarea:nth-child(1) {
+  width: 90%;
+}
+
+@media screen and (max-width: 450px) {
+  .grid-3 {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .grid-3 > div:nth-child(1) {
+    grid-row: 1;
+    grid-column: 1 / span 2;
+  }
 }
