--- a/public/css/style.css
+++ b/public/css/style.css
@@ -317,7 +317,7 @@ h1 {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  
+
   border: 1px solid #58c3b5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
@@ -808,6 +808,16 @@ body {
 }
 
 /*  */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  /* Firefox */
+}
 
 
 @media screen and (max-width: 600px) {
