uploading quest avatar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1255,3 +1255,63 @@ textarea {
     grid-column: 4;
   }
 }
+
+
+/* upload file */
+.upload-container {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 300px;
+}
+
+.upload-container h2 {
+  margin-bottom: 5px;
+}
+
+.file-input-container {
+  position: relative;
+  display: inline-block;
+}
+
+.file-input {
+  display: none;
+}
+
+.file-label {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #b0da9992;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.file-label:hover {
+  background-color: #b0da9992;
+}
+
+#preview {
+  margin-top: 20px;
+  max-width: 150px;
+  border-radius: 8px;
+  display: block;
+}
+
+.upload-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #b0da9992;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.upload-button:hover {
+  background-color: #b0da9992;
+}
