--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -52,7 +52,7 @@ body {
 @media screen and (max-height: 700px) {
   .sidenav {
     padding-top: 30px !important;
-    height: calc(100% - 30px) !important;
+    /* height: calc(100% - 30px) !important; */
   }
 }
 
@@ -66,7 +66,7 @@ body {
   top: 0;
   left: 0;
   opacity: 1;
-  height: calc(100% - 70px);
+  height: 100%;
   width: 300px;
   z-index: 1000;
   background-color: #0e130e;
@@ -124,10 +124,13 @@ body {
 
 @media screen and (max-width: 960px) {
   .mobile_logo {
-    padding: 10px;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     display: block;
+  }
+
+  .mobile_logo > img {
+    width: 100%;
   }
 }
 
