--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,12 +204,53 @@ h1 {
 }
 
 .text-background {
+  margin-top: 1em;
   overflow-y: scroll;
+  text-wrap: wrap;
   padding: 10px;
   width: 80%;
-  height: 60vh;
+  height: 65vh;
   background: linear-gradient(90deg, #b0da99 0%, #58c3b5 100%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.text-background::-webkit-scrollbar {
+  width: 10px;
+}
+
+.text-background::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.text-background::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Custom scrollbar for Firefox */
+.text-background {
+  scrollbar-width: auto;
+  scrollbar-color: #7eb292 #3a8563;
+}
+
+/* Custom scrollbar for other browsers (fallback) */
+.text-background::-moz-scrollbar {
+  width: 10px;
+}
+
+.text-background::-moz-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.text-background::-moz-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@media screen and (max-width: 600px) {
+  .text-background {
+    width: 95%;
+  }
 }
 
 .score {
@@ -221,6 +262,7 @@ h1 {
 }
 
 .read-text {
+  margin: 0;
   font-weight: 700;
   font-size: 1em;
   letter-spacing: 0.05em;
@@ -614,6 +656,7 @@ dialog {
 @media screen and (max-width: 940px) {
   .backBar {
     width: 100%;
+    margin-left: 0;
     justify-content: space-around;
   }
 }
@@ -679,6 +722,8 @@ menu {
 }
 
 .question-container {
+  max-width: 800px;
+  width: 100%;
   height: 80%;
   display: flex;
   flex-direction: column;
