--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -39,8 +39,8 @@ body {
 
 .nav-link {
   font-weight: 700;
-  font-size: 1.3em;
-  line-height: 1.8em;
+  font-size: 1.1em;
+  line-height: 1.5em;
   text-align: center;
   letter-spacing: 0.05em;
   color: #58c3b5;
@@ -50,7 +50,7 @@ body {
 @media screen and (max-height: 700px) {
   .sidenav {
     padding-top: 30px !important;
-    /* height: calc(100% - 30px) !important; */
+    height: calc(100% - 30px) !important;
   }
 }
 
@@ -120,7 +120,7 @@ body {
   right: 25px;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 991px) {
   .mobile_logo {
     width: 50px;
     height: 50px;
@@ -132,7 +132,7 @@ body {
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 991px) {
   .follow-bar {
     display: none !important;
   }
@@ -148,7 +148,7 @@ body {
   .follow-bar-mobile>* {
     width: 80%;
     display: inline-flex;
-    gap: 1.5em;
+    gap: 1em;
     justify-content: space-between;
   }
 
@@ -214,14 +214,14 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #b0da99;
+  background-color: #1b231b;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 200;
 }
 
 .dropdown-content a {
-  color: black;
+  color: #ddd;
   padding: 12px;
   text-decoration: none;
   text-align: left;
