--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,10 @@ body {
 
 .m-20 {
   margin: 20px;
+}
 
+.mt-1 {
+  margin-top: 1em;
 }
 
 .grid-3 {
@@ -154,6 +157,12 @@ h1 {
   letter-spacing: 0.05em;
   color: #ebf6e5;
 } */
+
+.view-button {
+  text-decoration: none;
+  box-sizing: border-box;
+  margin-top: 1em;
+}
 
 .wallet-name {
   font-size: 3em;
@@ -496,6 +505,11 @@ i {
   font-size: 3em;
   color: #ebf6e5;
   text-transform: capitalize;
+  margin-top: 0;
+}
+
+.progress-card {
+  padding-bottom: 0.7em !important;
 }
 
 .profile-picture {
@@ -686,6 +700,10 @@ i {
   cursor: pointer;
 }
 
+.password-form {
+  width: 50%;
+}
+
 
 /* Dialog to confirm abandoning the quest */
 
@@ -697,7 +715,7 @@ dialog {
   max-width: 1000px;
   width: 80%;
   color: #ddd;
-  background: #121d0b;
+  background:  #121d0c;
   border: none;
   padding: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -744,8 +762,27 @@ input[type="number"] {
   /* Firefox */
 }
 
+.form-container {
+  width: 70%;
+}
+.form-container > form {
+  width: 100%;
+}
+
+.form-container > form > input {
+  max-width: 350px;
+}
+
+.form-container > menu > button {
+  max-width: 300px;
+}
 
 @media screen and (max-width: 600px) {
+
+  .form-container {
+    width: 90%;
+  }
+
   dialog[open] {
     width: auto;
     height: 100%;
@@ -759,7 +796,12 @@ input[type="number"] {
     padding: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
+  }
+
+  menu > button {
+    width: 100%;
   }
 }
 
