--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,6 @@ body {
   flex-wrap: wrap;
 }
 
-
 .justify-center {
   justify-content: center !important;
 }
@@ -109,7 +108,6 @@ body {
   align-self: center;
 }
 
-
 /* full container used in login/register page */
 .full-container {
   height: 100vh;
@@ -127,7 +125,6 @@ h1 {
   letter-spacing: 0.05em;
   color: #ebf6e5;
 }
-
 
 .text-bold-sm {
   font-weight: 700;
@@ -209,7 +206,6 @@ h1 {
   box-sizing: border-box;
   border: 2px solid #387161;
 }
-
 
 .progress {
   width: 0%;
@@ -307,7 +303,6 @@ h1 {
   color: #ebf6e5;
 }
 
-
 .option-container {
   display: inline-flex;
   justify-content: center;
@@ -316,7 +311,6 @@ h1 {
   gap: 1em;
   position: relative;
 }
-
 
 .checkmark {
   display: flex;
@@ -331,15 +325,15 @@ h1 {
   box-sizing: border-box;
 }
 
-.option-container:hover input~.checkmark {
+.option-container:hover input ~ .checkmark {
   background-color: #58c3b5;
 }
 
-.option-container input:checked~.checkmark {
+.option-container input:checked ~ .checkmark {
   background-color: #b0da99;
 }
 
-.option-container input:checked~.checkmark:after {
+.option-container input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -357,7 +351,6 @@ h1 {
   width: 50px;
   height: 50px;
 }
-
 
 .pink {
   background: #e9526d;
@@ -411,7 +404,6 @@ a.main-button {
   align-content: center;
 }
 
-
 .main-button-style {
   text-transform: uppercase;
   background-color: transparent;
@@ -457,15 +449,15 @@ a.main-button {
   color: #ebf6e5;
 }
 
-.tos-text>a {
+.tos-text > a {
   text-decoration: underline;
 }
 
-.tos-text>a:link {
+.tos-text > a:link {
   color: white;
 }
 
-.tos-text>a:visited {
+.tos-text > a:visited {
   color: royalblue;
 }
 
@@ -612,7 +604,7 @@ i {
   border-radius: 20px 0px;
 }
 
-.image-background>img {
+.image-background > img {
   width: 80%;
   height: 80%;
   border-radius: 20px 0 20px 0;
@@ -635,7 +627,7 @@ i {
   height: 60px;
 }
 
-.star>i {
+.star > i {
   text-align: center;
   align-content: center;
 }
@@ -654,33 +646,32 @@ i {
   align-items: center;
 }
 
-
-.rating-option input[type="radio"]:checked+.rating-number {
+.rating-option input[type="radio"]:checked + .rating-number {
   background-color: #4caf50;
   color: white;
 }
 
-.rating-option input[type="radio"]:hover+.rating-number {
+.rating-option input[type="radio"]:hover + .rating-number {
   background-color: #a5d6a7;
 }
 
-.rating-option:nth-of-type(1)>.rating-number {
+.rating-option:nth-of-type(1) > .rating-number {
   background-color: #33452c;
 }
 
-.rating-option:nth-of-type(2)>.rating-number {
+.rating-option:nth-of-type(2) > .rating-number {
   background-color: #556f46;
 }
 
-.rating-option:nth-of-type(3)>.rating-number {
+.rating-option:nth-of-type(3) > .rating-number {
   background-color: #5b7f4c;
 }
 
-.rating-option:nth-of-type(4)>.rating-number {
+.rating-option:nth-of-type(4) > .rating-number {
   background-color: #81ae6d;
 }
 
-.rating-option:nth-of-type(5)>.rating-number {
+.rating-option:nth-of-type(5) > .rating-number {
   background-color: #b0da99;
 }
 
@@ -704,7 +695,6 @@ i {
   width: 50%;
 }
 
-
 /* Dialog to confirm abandoning the quest */
 
 dialog::backdrop {
@@ -715,7 +705,7 @@ dialog {
   max-width: 1000px;
   width: 80%;
   color: #ddd;
-  background:  #121d0c;
+  background: #121d0c;
   border: none;
   padding: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -736,7 +726,6 @@ dialog {
     justify-content: space-around;
   }
 }
-
 
 /* to work with showing questions and possible answers  */
 body {
@@ -778,7 +767,6 @@ input[type="number"] {
 }
 
 @media screen and (max-width: 600px) {
-
   .form-container {
     width: 90%;
   }
@@ -840,8 +828,6 @@ menu {
   gap: 2em;
 }
 
-
-
 .follow-bar {
   display: flex;
   justify-content: end;
@@ -859,7 +845,7 @@ menu {
 
 /* login logo and register one */
 
-.logo>img {
+.logo > img {
   width: 100%;
 }
 
@@ -898,7 +884,14 @@ form select {
   color: #ebf6e5;
   font-weight: 500;
   font-size: 1.2em;
-  letter-spacing: 0.10em;
+  letter-spacing: 0.1em;
+}
+
+.cards-create {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2em;
+  gap: 2em;
 }
 
 .cards {
@@ -923,13 +916,12 @@ form select {
   justify-content: center;
 }
 
-
 @media screen and (max-width: 960px) {
   .full-container {
     flex-direction: column;
   }
 
-  .logo>img {
+  .logo > img {
     width: 80% !important;
   }
 
@@ -945,17 +937,36 @@ form select {
     width: auto !important;
   }
 
-
   .profile-column {
     min-width: 500px;
   }
 }
+
+.questions {
+  grid-row: 2;
+  grid-column: 1 / span 2;
+  max-width: 100%!important;
+}
+
+
 
 @media screen and (max-width: 1200px) {
   .cards {
     grid-template-columns: 1fr;
     padding: 1em !important;
   }
+
+  .cards-create {
+    grid-template-columns: 1fr !important;
+    padding: 1em !important;
+  }
+
+  .questions {
+    grid-row: auto;
+    grid-column: auto;
+    width: 100%;
+  }
+  
 
   .profile-column {
     min-width: 500px;
@@ -976,6 +987,11 @@ form select {
     margin: 0 16px !important;
     width: auto !important;
   }
+
+  .questions > .card {
+    padding: 0 !important;
+    max-width: 400px;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -983,8 +999,6 @@ form select {
     min-width: 340px;
   }
 }
-
-
 
 .container-card {
   border: 2px solid transparent;
@@ -1005,7 +1019,6 @@ form select {
   border: 0;
   width: 100%;
 }
-
 
 .login-container {
   max-width: 700px;
@@ -1036,7 +1049,6 @@ form select {
   height: 100px;
   border-radius: 30px;
 }
-
 
 .image-green-box {
   position: relative;
@@ -1072,7 +1084,6 @@ form select {
   color: #ebf6e5;
   text-align: left;
 }
-
 
 .description {
   max-height: 2.2em;
@@ -1112,7 +1123,6 @@ form select {
 }
 
 @media screen and (max-width: 600px) {
-
   .infos {
     flex-direction: column;
     margin-left: 2em;
@@ -1133,8 +1143,6 @@ form select {
     padding: 20px !important;
   }
 }
-
-
 
 .enter-button {
   margin-top: 1em;
@@ -1180,16 +1188,17 @@ form select {
   text-decoration: none;
 }
 
+#preview {
+  min-width: 300px;
+  min-height: 300px;
+  display: flex;
+  align-content: center;
+  text-align: center;
+  background-color: #293324;
+  color: #ddd;
+}
 .add-quest i {
   color: #b0da99;
-}
-
-#questForm {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
 }
 
 .grid-2 {
@@ -1209,7 +1218,8 @@ textarea {
 textarea {
   text-align: left;
   border: 0;
-  height: 70px;
+  height: 100px;
+  font-size: 1.4em;
   background: rgba(236, 248, 243, 0.2);
   box-shadow: inset 0px 5px 6px 2px rgba(0, 0, 0, 0.12);
   border-radius: 10px;
@@ -1221,13 +1231,11 @@ textarea {
   gap: 1em;
 }
 
-
 .points {
   height: 50px;
-  width: 100%;
-  border-radius: 5px !important;
+  width: 80%;
+  border-radius: 30px !important;
 }
-
 
 #description {
   width: 90%;
@@ -1241,20 +1249,19 @@ textarea {
     grid-template-rows: 1fr 1fr;
   }
 
-  .grid-3>div:nth-child(1) {
+  .grid-3 > div:nth-child(1) {
     grid-row: 1;
     grid-column: 1 / span 4;
   }
 
-  .grid-3>div:nth-child(2) {
+  .grid-3 > div:nth-child(2) {
     grid-column: 3;
   }
 
-  .grid-3>div:nth-child(3) {
+  .grid-3 > div:nth-child(3) {
     grid-column: 4;
   }
 }
-
 
 /* upload file */
 .upload-container {
