--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,10 @@ body {
   width: 50%;
 }
 
+.w-20 {
+  width: 20%!important;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -135,25 +139,10 @@ h1 {
   color: #ebf6e5;
 }
 
-/* 
-.modal {
-  max-width: 1200px;
-  padding: 2em;
-  padding-bottom: 3em;
-  box-sizing: border-box;
-  background: rgba(41, 112, 80, 0.2);
-  border: 1px solid #297050;
-  border-radius: 10px;
+.tos > .checkmark {
+  width: 30px;
+  height: 30px;
 }
-
-.modal>p {
-  font-weight: 700;
-  font-size: 2em;
-  line-height: 2em;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #ebf6e5;
-} */
 
 .view-button {
   text-decoration: none;
@@ -170,6 +159,13 @@ h1 {
 
 .main-text {
   font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #ebf6e5;
+}
+
+.main-text-light {
+  font-weight: 400;
   text-align: center;
   letter-spacing: 0.05em;
   color: #ebf6e5;
@@ -285,7 +281,6 @@ h1 {
 }
 
 .question-text {
-  font-family: "Inter";
   font-weight: 700;
   font-size: 2em;
   line-height: 2.5em;
@@ -295,7 +290,6 @@ h1 {
 }
 
 .option-text {
-  font-family: "Inter";
   font-weight: 400;
   font-size: 1.5em;
   line-height: 2em;
@@ -310,6 +304,55 @@ h1 {
   width: 100%;
   gap: 1em;
   position: relative;
+}
+
+.option-container:hover input ~ .checkmark {
+  background-color: #58c3b5;
+}
+
+.option-container input:checked ~ .checkmark {
+  background-color: #b0da99;
+}
+
+.option-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.tos-checkbox {
+  position: relative;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 20px;
+  height: 20px;
+  gap: 0.5em;
+  border: 1px solid #58c3b5;
+  margin-right: 4px;
+  border-radius: 50%;
+}
+
+.tos-checkbox input[type="checkbox"] {
+  z-index: 200;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.tos-checkbox input[type="checkbox"]:checked .tos-checkbox {
+  background-color: #b0da99;
+}
+.tos-checkbox input[type="checkbox"]:checked ~ .tos-checkbox:after {
+  display: block;
+}
+
+.tos-checkbox:after {
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .checkmark {
@@ -434,17 +477,10 @@ a.main-button {
   letter-spacing: 0.15em;
 }
 
-#tos-checkbox {
-  box-sizing: border-box;
-  border: 2px solid #58c3b5;
-  border-radius: 20px;
-}
-
 .tos-text {
   font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-
+  font-size: 1em;
+  line-height: 1.3em;
   letter-spacing: 0.05em;
   color: #ebf6e5;
 }
@@ -696,6 +732,7 @@ dialog::backdrop {
 }
 
 dialog {
+  border-radius: 40px;
   max-width: 1000px;
   width: 80%;
   color: #ddd;
@@ -703,6 +740,16 @@ dialog {
   border: none;
   padding: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.main-button:hover {
+  background-color: #ebf6e5;
+  transition: background-color 0.5s;
+}
+
+.secondary-button:hover {
+  background-color: #58c3b5;
+  transition: background-color 0.5s;
 }
 
 .backBar {
@@ -943,10 +990,8 @@ form select {
 .questions {
   grid-row: 2;
   grid-column: 1 / span 2;
-  max-width: 100%!important;
+  max-width: 100% !important;
 }
-
-
 
 @media screen and (max-width: 1200px) {
   .cards {
@@ -964,7 +1009,6 @@ form select {
     grid-column: auto;
     width: 100%;
   }
-  
 
   .profile-column {
     min-width: 500px;
@@ -1153,9 +1197,8 @@ form select {
   background: #b0da99;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  font-family: "Inter";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.4em;
   color: #000000;
